--- a/index.html
+++ b/index.html
@@ -96,7 +96,37 @@
                 </li>
             </ul>
             </div>
-
+        </section>
+        <section class="section-clients">
+            <div class="container">
+                <h2 class="section-main-title third-margin">Постоянные клиенты</h2>
+            <ul class="list clients-box">
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 1">
+                    </a>
+                </li>
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 2">
+                    </a>
+                </li>
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 3">
+                    </a>
+                </li>
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 4">
+                    </a>
+                </li>
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 5">
+                    </a>
+                </li>
+                <li class="box clients-margin"><a class="clients-link" href="">
+                    <img src="" alt="логотип клиента 6">
+                    </a>
+                </li>
+            </ul>
+            </div>
         </section>
     </main>
     <!--Футер-->
