--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <section class="section">
             <div class="container">
              <ul class="list benefits">
-                <li class="list-box-first">
+                <li class="list-box-first list-item-svg1">
                     <h3 class="section-title">Внимание к деталям</h3>
                     <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="list-box-first">
+                <li class="list-box-first list-item-clock2">
                     <h3 class="section-title">Пунктуальность</h3>
                     <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="list-box-first">
+                <li class="list-box-first list-item-diagram3">
                     <h3 class="section-title">Планирование</h3>
                     <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="list-box-first">
+                <li class="list-box-first list-item-astronaut4">
                     <h3 class="section-title">Современные технологии</h3>
                     <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -101,28 +101,56 @@
             <div class="container">
                 <h2 class="section-main-title third-margin">Постоянные клиенты</h2>
             <ul class="list clients-box">
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 1">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon" width="44" height="49">
+                        <use href="./image/sprite.svg#icon-client1"></use>
+                    </svg>
                     </a>
                 </li>
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 2">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon">
+                        <use>
+
+                        </use>
+                    </svg>
                     </a>
                 </li>
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 3">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon">
+                        <use>
+
+                        </use>
+                    </svg>
                     </a>
                 </li>
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 4">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon">
+                        <use>
+
+                        </use>
+                    </svg>
                     </a>
                 </li>
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 5">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon">
+                        <use>
+
+                        </use>
+                    </svg>
                     </a>
                 </li>
-                <li class="box clients-margin"><a class="clients-link" href="">
-                    <img src="" alt="логотип клиента 6">
+                <li class="box clients-margin">
+                    <a class="clients-link" href="">
+                    <svg class="clients-list-icon">
+                        <use>
+
+                        </use>
+                    </svg>
                     </a>
                 </li>
             </ul>
