--- a/index.html
+++ b/index.html
@@ -79,20 +79,149 @@
             <h2 class="section-main-title secondary-margin">Наша команда</h2>
             <ul class="list team-boxes">
                 <li class="box team-items"> <img src="./image/img4.jpg" alt="фото Игоря Демьяненко" width="270">
+                    <div class="team-list-content-wrapper">
                     <h4 class="team-name">Игорь Демьяненко</h4>
                     <p class="section-text-profession">Product Designer</p>
+                    <ul class=" list social-list">
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="box team-items"> <img src="./image/img5.jpg" alt="фото Ольги Репиной" width="270">
+                    <div class="team-list-content-wrapper">
                     <h4 class="team-name">Ольга Репина</h4>
                     <p class="section-text-profession">Frontend Developer</p>
+                    <ul class=" list social-list">
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="box team-items"><img src="./image/img6.jpg" alt="фото Николая Тарасова" width="270">
+                    
+                    <div class="team-list-content-wrapper">
                     <h4 class="team-name">Николай Тарасов</h4>
                     <p class="section-text-profession">Marketing</p>
+                    <ul class=" list social-list">
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
                 <li class="box team-items"><img src="./image/img7.jpg" alt="фото Михаила Ермакова" width="270">
+                    <div class="team-list-content-wrapper">
                     <h4 class="team-name">Михаил Ермаков</h4>
                     <p class="section-text-profession">UI Designer</p>
+                    <ul class=" list social-list">
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-list-link">
+                                <svg class="social-list-svg">
+                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    </div>
                 </li>
             </ul>
             </div>
@@ -102,54 +231,44 @@
                 <h2 class="section-main-title third-margin">Постоянные клиенты</h2>
             <ul class="list clients-box">
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
+                    <a class=" list clients-link" href="">
                     <svg class="clients-list-icon" width="44" height="49">
                         <use href="./image/sprite.svg#icon-client1"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
-                    <svg class="clients-list-icon">
-                        <use>
-
-                        </use>
+                    <a class="list clients-link" href="">
+                    <svg class="clients-list-icon" width="40" height="52">
+                        <use href="./image/sprite.svg#icon-client2"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
-                    <svg class="clients-list-icon">
-                        <use>
-
-                        </use>
+                    <a class="list clients-link" href="">
+                    <svg class="clients-list-icon" width="41" height="43">
+                        <use href="./image/sprite.svg#icon-client3"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
-                    <svg class="clients-list-icon">
-                        <use>
-
-                        </use>
+                    <a class="list clients-link" href="">
+                    <svg class="clients-list-icon" width="80" height="42">
+                        <use href="./image/sprite.svg#icon-client4"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
-                    <svg class="clients-list-icon">
-                        <use>
-
-                        </use>
+                    <a class="list clients-link" href="">
+                    <svg class="clients-list-icon" width="59" height="47">
+                        <use href="./image/sprite.svg#icon-client5"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="box clients-margin">
-                    <a class="clients-link" href="">
-                    <svg class="clients-list-icon">
-                        <use>
-
-                        </use>
+                    <a class="list clients-link" href="">
+                    <svg class="clients-list-icon" width="88" height="45">
+                        <use href="./image/sprite.svg#icon-client6"></use>
                     </svg>
                     </a>
                 </li>
