--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
         </nav>
 
         <ul class="auth-nav list">
-            <li class="list-contacts"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-contacts"> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="list-contacts"> 
+                <a href="mailto:info@devstudio.com">
+                    <svg class="auth-nav-svg">
+                        <use href="./image/sprite.svg#icon-mail"></use>
+                    </svg>
+                    info@devstudio.com</a></li>
+            <li class="list-contacts"> 
+                <a href="tel:+380961111111">
+                    <svg class="auth-nav-svg">
+                        <use href="./image/sprite.svg#icon-tel"></use>
+                    </svg>
+                    +38 096 111 11 11</a>
+            </li>
         </ul>
         </div>
     </header>
@@ -107,7 +118,7 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -143,7 +154,7 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -180,7 +191,7 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -216,7 +227,7 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image./sprite.svg#icon-linkedin1"></use>
+                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -289,6 +300,12 @@
             <li class="adress-items"><a class="address-auth" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
+        <div>
+            <p></p>
+            <ul>
+                <li><a href="http://"></a></li>
+            </ul>
         </div>
     </footer>
 </body>
