исправлены ховеры на svg

--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                    <use href="./image/sprite.svg#icon-instagram2"></use>>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                    <use href="./image/sprite.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                    <use href="./image/sprite.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
+                                    <use href="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -133,28 +133,28 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                    <use href="./image/sprite.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                    <use href="./image/sprite.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                    <use href="./image/sprite.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
+                                    <use href="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -170,28 +170,28 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                    <use href="./image/sprite.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                    <use href="./image/sprite.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                    <use href="./image/sprite.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
+                                    <use href="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -206,28 +206,28 @@
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-instagram2"></use>
+                                    <use href="./image/sprite.svg#icon-instagram2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-twitter1"></use>
+                                    <use href="./image/sprite.svg#icon-twitter1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-facebook1"></use>
+                                    <use href="./image/sprite.svg#icon-facebook1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-list-link">
                                 <svg class="social-list-svg">
-                                    <use hfer="./image/sprite.svg#icon-linkedin1"></use>
+                                    <use href="./image/sprite.svg#icon-linkedin1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -289,7 +289,8 @@
     </main>
     <!--Футер-->
     <footer class="page-footer">
-        <div class="container">
+        <div class=" container all-footer-container">
+        <div class="">
         <a class="logo-footer" href="./index.html">
             <span class="logo-web">Web</span>Studio
         </a>
@@ -301,11 +302,39 @@
             </ul>
         </address>
         </div>
-        <div>
-            <p></p>
-            <ul>
-                <li><a href="http://"></a></li>
+        <div class="box-social-link">
+            <p class="text-footer">присоединяйтесь</p>
+            <ul class="list list-social-footer">
+                <li class="list-item-footer">
+                    <a href="" class="social-item-footer">
+                    <svg class="social-svg-footer">
+                        <use href="./image/sprite.svg#icon-instagram2"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="list-item-footer">
+                    <a href="" class="social-item-footer">
+                        <svg class="social-svg-footer">
+                            <use href="./image/sprite.svg#icon-twitter1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="list-item-footer">
+                    <a href="" class="social-item-footer">
+                        <svg class="social-svg-footer">
+                            <use href="./image/sprite.svg#icon-facebook1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="list-item-footer">
+                    <a href="" class="social-item-footer">
+                        <svg class="social-svg-footer">
+                            <use href="./image/sprite.svg#icon-linkedin1"></use>
+                        </svg>
+                    </a>
+                </li>
             </ul>
+        </div>
         </div>
     </footer>
 </body>
