добавление футера на страницу портфолио

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
         <ul class="auth-nav list">
             <li class="list-contacts"> 
-                <a href="mailto:info@devstudio.com">
+                <a class="link-auth-nav-svg" href="mailto:info@devstudio.com">
                     <svg class="auth-nav-svg">
                         <use href="./image/sprite.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com</a></li>
             <li class="list-contacts"> 
-                <a href="tel:+380961111111">
+                <a class="link-auth-nav-svg" href="tel:+380961111111">
                     <svg class="auth-nav-svg">
                         <use href="./image/sprite.svg#icon-tel"></use>
                     </svg>
@@ -290,7 +290,7 @@
     <!--Футер-->
     <footer class="page-footer">
         <div class=" container all-footer-container">
-        <div class="">
+        <div class="box-adress-main">
         <a class="logo-footer" href="./index.html">
             <span class="logo-web">Web</span>Studio
         </a>
