--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,21 @@
                 </ul>
             </nav>
     
-            <ul class="auth-nav list">
-                <li class="list-contacts"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list-contacts"> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+        <ul class="auth-nav list">
+            <li class="list-contacts">
+                <a class="link-auth-nav-svg" href="mailto:info@devstudio.com">
+                    <svg class="auth-nav-svg">
+                        <use href="./image/sprite.svg#icon-mail"></use>
+                    </svg>
+                    info@devstudio.com</a></li>
+            <li class="list-contacts">
+                <a class="link-auth-nav-svg" href="tel:+380961111111">
+                    <svg class="auth-nav-svg">
+                        <use href="./image/sprite.svg#icon-tel"></use>
+                    </svg>
+                    +38 096 111 11 11</a>
+            </li>
+        </ul>
         </div>
     </header>
     <main>
@@ -126,19 +137,54 @@
     </main>
     <!--Футер-->
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo-footer" href="./index.html">
-                <span class="logo-web">Web</span>Studio
-            </a>
-            <address>
-                <ul class="adress-ul">
-                    <li class="adress-items"><a class="address" href="https://goo.gl/maps/zpj7TdcQ5fywLmtB6"
-                            target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="adress-items"><a class="address-auth" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <div class=" container all-footer-container">
+            <div class="box-adress-main">
+                <a class="logo-footer" href="./index.html">
+                    <span class="logo-web">Web</span>Studio
+                </a>
+                <address>
+                    <ul class="adress-ul">
+                        <li class="adress-items"><a class="address" href="https://goo.gl/maps/zpj7TdcQ5fywLmtB6"
+                                target="_blank">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="adress-items"><a class="address-auth"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="adress-items"><a class="address-auth" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="box-social-link">
+                <p class="text-footer">присоединяйтесь</p>
+                <ul class="list list-social-footer">
+                    <li class="list-item-footer">
+                        <a href="" class="social-item-footer">
+                            <svg class="social-svg-footer">
+                                <use href="./image/sprite.svg#icon-instagram2"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="adress-items"><a class="address-auth" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="list-item-footer">
+                        <a href="" class="social-item-footer">
+                            <svg class="social-svg-footer">
+                                <use href="./image/sprite.svg#icon-twitter1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="list-item-footer">
+                        <a href="" class="social-item-footer">
+                            <svg class="social-svg-footer">
+                                <use href="./image/sprite.svg#icon-facebook1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="list-item-footer">
+                        <a href="" class="social-item-footer">
+                            <svg class="social-svg-footer">
+                                <use href="./image/sprite.svg#icon-linkedin1"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
