--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             </a>
 
             <ul class="site-nav list">
-                <li class="navigation-list"> <a href="./index.html" class="current">Студия</a></li>
-                <li class="navigation-list"> <a href="./portfolio.html">Портфолио</a></li>
-                <li class="navigation-list"> <a href="">Контакты</a></li>
+                <li class="navigation-list"> <a href="./index.html" class="current links-transition menu-link">Студия</a></li>
+                <li class="navigation-list"> <a href="./portfolio.html" class="links-transition menu-link">Портфолио</a></li>
+                <li class="navigation-list"> <a href="" class="links-transition menu-link">Контакты</a></li>
             </ul>
         </nav>
 
         <ul class="auth-nav list">
             <li class="list-contacts"> 
-                <a class="link-auth-nav-svg" href="mailto:info@devstudio.com">
+                <a class="link-auth-nav-svg links-transition" href="mailto:info@devstudio.com">
                     <svg class="auth-nav-svg">
                         <use href="./image/sprite.svg#icon-mail"></use>
                     </svg>
                     info@devstudio.com</a></li>
             <li class="list-contacts"> 
-                <a class="link-auth-nav-svg" href="tel:+380961111111">
+                <a class="link-auth-nav-svg links-transition" href="tel:+380961111111">
                     <svg class="auth-nav-svg">
                         <use href="./image/sprite.svg#icon-tel"></use>
                     </svg>
@@ -78,9 +78,24 @@
             <div class="container">
             <h2 class="section-main-title">Чем мы занимаемся</h2>
             <ul class="list images-work">
-                <li class="list-box-secondary"> <img src="./image/img1.png" alt="сотрудник работает за компьютером" width="370"></li>
-                <li class="list-box-secondary"> <img src="./image/img2.png" alt="сотрудник работает с контактами" width="370"></li>
-                <li class="list-box-secondary"> <img src="./image/img3.png" alt="сотрудник работает с цветовой палитрой" width="370"></li>
+                <li class="list-box-secondary"> 
+                    <div class="work-thumb">
+                    <img src="./image/img1.png" alt="сотрудник работает за компьютером" width="370">
+                    <div class="wraper-text-name"><p class="text-name">Десктопные приложения</p></div>
+                    </div>
+                </li>
+                <li class="list-box-secondary"> 
+                    <div class="work-thumb">
+                    <img src="./image/img2.png" alt="сотрудник работает с контактами" width="370">
+                    <div class="wraper-text-name"><p class="text-name">Десктопные приложения</p></div>
+                    </div>
+                </li>
+                <li class="list-box-secondary"> 
+                    <div class="work-thumb">
+                    <img src="./image/img3.png" alt="сотрудник работает с цветовой палитрой" width="370">
+                    <div class="wraper-text-name"><p class="text-name">Десктопные приложения</p></div>
+                    </div>
+                </li>
             </ul>
             </div>
         </section>
