--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,12 @@
             <div class="container">
             <ul class="list all-portfolio-list">
                 <li class="box portfolio-card">           
-                    <a class="portfolio-link" href=""><img src="./image/portfolio1.jpg" alt="отображен веб-сайт Технокряк на ноутбуке" width="370">
+                    <a class="portfolio-link" href="">
+                        <div class="image-thumb">
+                        <img src="./image/portfolio1.jpg" alt="отображен веб-сайт Технокряк на ноутбуке" width="370">
+                        <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="portfolio-padding">
                     <h2 class="portfolio-name">Технокряк</h2>
                     <p class="section-text-type">Веб-сайт</p>
